实现schedule table 精度控制

--- a/tool/gainos-studio/ui/forms/cd_schedtbl.ui
+++ b/tool/gainos-studio/ui/forms/cd_schedtbl.ui
@@ -175,7 +175,7 @@
        <item>
         <widget class="QSpinBox" name="spbxSchedTblPrecision">
          <property name="enabled">
-          <bool>false</bool>
+          <bool>true</bool>
          </property>
          <property name="minimumSize">
           <size>
